--- a/stable-rc/linux-bfq-git/PKGBUILD
+++ b/stable-rc/linux-bfq-git/PKGBUILD
@@ -49,8 +49,8 @@ pkgbase=linux-bfq-git
 # pkgname=('linux-bfq-git' 'linux-bfq-git-headers' 'linux-bfq-git-docs')
 _major=5.5
 _srcname=linux-stable-rc
-pkgver=5.5.9.r310.g8b841eb697e17
-pkgrel=0.5
+pkgver=5.5.9.r311.g632a9431491f2
+pkgrel=0.6
 pkgdesc='Linux BFQ-dev'
 arch=('x86_64')
 url="https://github.com/sirlucjan/bfq-mq-lucjan"
@@ -67,7 +67,7 @@ _bfq_rev_path="bfq-reverts-all-v3"
 _bfq_rev_patch="0001-bfq-reverts.patch"
 _bfq_path="bfq-dev-lucjan"
 _bfq_ver="v11"
-_bfq_rel="r2K200320"
+_bfq_rel="r2K200323"
 _bfq_patch="${_major}-${_bfq_path}-${_bfq_ver}-${_bfq_rel}.patch"
 _gcc_path="https://raw.githubusercontent.com/graysky2/kernel_gcc_patch/master"
 _gcc_patch="enable_additional_cpu_optimizations_for_gcc_v9.1+_kernel_v5.5+.patch"
@@ -344,7 +344,7 @@ done
 
 sha512sums=('SKIP'
             'f5be1a403f359f8792d80e45d3b27527223d2f6af91814725c3e3b68a76c54c3b1917a0ed90ca8cb858f20422857c2b30c97f542a47fa26256dc5fbcd91802bc'
-            'b1ab0b8d2924112f194ac57f415c1ee5ba66a13ecccbc84e422620fd6dead22cd50a09ccb3c45c7f0e2a2642b793a7dc07de3915e6c7b2ee775e075aa8288d8b'
+            '4c3ece68c9713c39feea4a871da6d58d34ea02113536f40e79c2ef4580dd3dd630b52473acc570d46379eb291715918eb1a52a4bb9334886512aeb8edc9beec8'
             '52b14ef834769d2b4567e756a4485995acd2e3f5b989cbb53f9b113b42ff67b736bbcb284b95fe15c9efb846fd12320a26a131e4ce9af50b521114d274b472f1'
             '4ff65442a2a6e50351d8af4180374b9bff7ca4bb74e20e13ca0e650617cc099fed9ec843c10dcb76c68014814819d26464821c9930f926972213f7f9122e983b'
             'ac8a375b78f2a1eb128b3154e5c289b2db60b84b751bd9aec201d691f6b7322f6866296841dcc34f7d37ae3c497f86112e8aceaa628ef186b8f8a283d1b8a454'
