--- a/stable-rc/linux-aufs-git/PKGBUILD
+++ b/stable-rc/linux-aufs-git/PKGBUILD
@@ -64,7 +64,7 @@ _aufs_path="aufs-patches"
 _aufs_ver="20200518"
 _aufs_patch="0001-aufs-${_aufs_ver}.patch"
 _gcc_path="cpu-patches-v3-sep"
-_gcc_patch="0001-cpu-5.6-merge-graysky-s-patchset.patch"
+_gcc_patch="0001-cpu-${_major}-merge-graysky-s-patchset.patch"
 
 source=("git://git.kernel.org/pub/scm/linux/kernel/git/stable/${_srcname}.git#branch=linux-${_major}.y"
         "${_lucjanpath}/${_aufs_path}/${_aufs_patch}"
