--- a/stable/linux-aufs-git/PKGBUILD
+++ b/stable/linux-aufs-git/PKGBUILD
@@ -49,8 +49,8 @@ pkgbase=linux-aufs-git
 # pkgname=('linux-aufs-git' 'linux-aufs-git-headers' 'linux-aufs-git-docs')
 _major=5.7
 _srcname=linux
-pkgver=5.7.9.r0.g7490e75482cc
-pkgrel=2
+pkgver=5.7.10.r0.g780e72b00545
+pkgrel=1
 pkgdesc='Linux AUFS'
 arch=('x86_64')
 url="https://github.com/sfjro/aufs5-standalone"
@@ -69,10 +69,10 @@ _gcc_patch="0001-cpu-${_major}-merge-graysky-s-patchset.patch"
 source=("git://git.kernel.org/pub/scm/linux/kernel/git/stable/${_srcname}.git#branch=linux-${_major}.y"
         "${_lucjanpath}/${_aufs_path}/${_aufs_patch}"
         "${_lucjanpath}/${_gcc_path}/${_gcc_patch}"
-        "${_lucjanpath}/arch-patches-v8-sep/0001-ZEN-Add-sysctl-and-CONFIG-to-disallow-unprivileged-C.patch"
-        "${_lucjanpath}/arch-patches-v8-sep/0002-PCI-EDR-Log-only-ACPI_NOTIFY_DISCONNECT_RECOVER-even.patch"
-        "${_lucjanpath}/arch-patches-v8-sep/0003-iwlwifi-Make-some-Killer-Wireless-AC-1550-cards-work.patch"
-        "${_lucjanpath}/arch-patches-v8-sep/0004-virt-vbox-Add-support-for-the-new-VBG_IOCTL_ACQUIRE_.patch"
+        "${_lucjanpath}/arch-patches-v9-sep/0001-ZEN-Add-sysctl-and-CONFIG-to-disallow-unprivileged-C.patch"
+        "${_lucjanpath}/arch-patches-v9-sep/0002-PCI-EDR-Log-only-ACPI_NOTIFY_DISCONNECT_RECOVER-even.patch"
+        "${_lucjanpath}/arch-patches-v9-sep/0003-iwlwifi-Make-some-Killer-Wireless-AC-1550-cards-work.patch"
+        "${_lucjanpath}/arch-patches-v9-sep/0004-virt-vbox-Add-support-for-the-new-VBG_IOCTL_ACQUIRE_.patch"
         'sphinx-workaround.patch'
          # the main kernel config files
         'config')
@@ -327,9 +327,9 @@ done
 sha512sums=('SKIP'
             'd383ff21c59aaccffbf9fac412495383118612ddbe6bf06691e2038d2b886754d2ba85b29f970f548103e1d0be519d114ba4641f29d329b604c7456db36ff193'
             'ef8c9706da28eeaf98028609bf8ef6f558f7701f985c5925be6388dad0fbe8654fc15a803cd14f99ff89c026d471bbddbdff378b18db3f05f3d952faf943af72'
-            'd9a56e2a53cccd201717a88ca58bab3e50954856560cf64d8dd1b3823a14270fa75619e95831c8d992a005ea72c86adcb8f971f4b2246f04ea3472a1596da999'
-            '789c2d738c4c12f6702d84963920cae0069b8777bb4db464502a661f33c123c9370fa4e25b27cb1242b3565e963d49e6b267d65722407a08c60de58045ea1c3d'
-            'cfe89447ef11a83e82a4d4029df78f90bc40e2e3cb11872b0fede7daae8339ff5ba7d11d628b2d3694fef7d5041363bfb5ea88c7ed120c43ba5548fe55556a95'
-            '837b177f3f8b5ddfcd67fa33576578362938e78ce953b9adfb043e144dcce23179eca31c5bc22557ef8d41abd852bf0dfbc8aaad99a331a59075d232a16e3c75'
+            'ccff7e733e0943914eae6706330e41868886a8dabe4ca52ef4751824fd834602a8b8189065518d2047f1099e416cbec731b6848c076f77ef3756ce3a374c9bdc'
+            'a1eae2f0a2a20fb8d6ea7922c1d15cc4f0631f8baaf01ba9dd28e76ad9cababbbf702c7750ea2ea3ad95a46ee697111e7f67a0b93e13885419ec67e99b19542a'
+            'f7ba6783a013b42f2080c3eb6da3db626539f1528c3b07e2deb8e5eb01fb2caa5f5689943e67cdffe46fe184494af8df6f2bbf2f78d031bc19f8fb885c26e815'
+            '70db105a85a58d67cd650ae64cb543c4453e83bea41ad54edaf53d88bb2f75afe3d7c8d2f4b9e4c4c62a17efe5b36fcb8f6713512b8b4b7dc88e8f04a277390f'
             '98e97155f86bbe837d43f27ec1018b5b6fdc6c372d6f7f2a0fe29da117d53979d9f9c262f886850d92002898682781029b80d4ee923633fc068f979e6c8254be'
             '552608d223390a5093ec64e3d4ecb303d1a0708cbe1f5a6d1eabd07c8862b10dfc75306fbaf635d6e785627af113af954f1244c04e161979e291440c3349ccde')
